# SDL

./: Android.mk  CMakeLists.txt  find-dylib-name.py  meson.build  meson_options.txt
VisualC-GDK/SDL/: SDL.vcxproj
VisualC-WinRT/: SDL-UWP.vcxproj
VisualC/SDL/: SDL.vcxproj  SDL.vcxproj.filters
include/: SDL_config.h.meson  meson.build
include/SDL3/: SDL_gpu.h  SDL_hints.h
include/build_config/: SDL_build_config.h.cmake  SDL_build_config_windows.h
src/: meson.build
src/audio/: meson.build
src/core/: meson.build
src/core/freebsd/: meson.build
src/core/linux/: meson.build
src/dynapi/: SDL_dynapi.sym  SDL_dynapi_overrides.h  SDL_dynapi_procs.h
src/events/: SDL_mouse.c
src/gpu/: SDL_gpu.c  SDL_gpu_driver.h  SDL_gpu_spirv.c  SDL_sysgpu.h
src/gpu/d3d11/: SDL_gpu_d3d11.c
src/gpu/d3d12/: D3D12_Blit.h  SDL_gpu_d3d12.c  compile_shaders.bat
src/gpu/d3dcommon/: D3D_Blit.hlsl
src/gpu/metal/: SDL_gpu_metal.m
src/gpu/vulkan/: SDL_gpu_vulkan.c  SDL_gpu_vulkan_vkfuncs.h
src/joystick/: meson.build
src/misc/: meson.build
src/render/: SDL_d3dmath.h  SDL_render.c  SDL_sysrender.h  meson.build
src/render/sdlgpu/: SDL_gpu_util.h  SDL_pipeline_gpu.c  SDL_pipeline_gpu.h  SDL_render_gpu.c  SDL_shaders_gpu.c  SDL_shaders_gpu.h
src/render/sdlgpu/shaders/: build-shaders.sh  color.frag.hlsl  color.frag.metal  color.frag.sm51.dxbc.h  color.frag.spv  color.frag.spv.h  dxbc51.h  linepoint.vert.hlsl  linepoint.vert.spv  (+21 more)
src/sensor/: meson.build
src/thread/windows/: meson.build
src/video/directx/: SDL_d3d12.h
test/: CMakeLists.txt  testgpu_spinning_cube.c
